[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/art/ui/icon_q.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/HeldItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/font/kongtext.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/art/ui/item_box.png" type="Texture" id=4]
[ext_resource path="res://assets/art/items/wood.png" type="Texture" id=5]
[ext_resource path="res://assets/art/ui/item_box_select.png" type="Texture" id=6]
[ext_resource path="res://assets/art/ui/icon_e.png" type="Texture" id=7]
[ext_resource path="res://src/Itembox.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BaseSprite/Weapon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BaseSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Amount:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=3]
resource_name = "box_zoom"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("BaseSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.15, 1.15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Amount:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 16 ), Vector2( 6, 21 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemButton:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 96, 96 ), Vector2( 112, 112 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ItemButton:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -48, -48 ), Vector2( -56, -56 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "zoom"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("BaseSprite/Weapon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.15, 1.15 ) ]
}

[node name="Itembox" type="Node2D" groups=["itemboxes"]]
position = Vector2( 48, 48 )
script = ExtResource( 8 )

[node name="Selection" type="Sprite" parent="."]
visible = false
position = Vector2( -2.38419e-07, -2.38419e-07 )
scale = Vector2( 0.875, 0.875 )
texture = ExtResource( 6 )

[node name="BaseSprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Weapon" type="Sprite" parent="BaseSprite"]
scale = Vector2( 1.15, 1.15 )
texture = ExtResource( 5 )

[node name="IconQ" type="Sprite" parent="BaseSprite"]
visible = false
position = Vector2( -32, -32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="IconE" type="Sprite" parent="BaseSprite"]
visible = false
position = Vector2( 38, -32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="ItemButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0

[node name="Amount" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
margin_right = 32.0
margin_bottom = 41.0
rect_scale = Vector2( 1.25, 1.25 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 2

[node name="HeldItem" parent="." instance=ExtResource( 2 )]

[node name="Anims" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/box_zoom = SubResource( 3 )
anims/zoom = SubResource( 2 )

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
